src/objects/Job__c.object
<CustomObject>
    <fields>
        <fullName>Assignment_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geopointe Assignment Area</label>
        <referenceTo>geopointe__GP_Assignment_Area__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoCode_Date_Time__c</fullName>
        <label>GeoCode Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Geocode_Quality__c</fullName>
        <label>Geocode Quality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geopointe_Shape__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geopointe Shape</label>
        <referenceTo>geopointe__Shape__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Master_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Assignment</label>
        <referenceTo>geopointe__GP_Assignment_Area__c</referenceTo>
        <relationshipLabel>Jobs (Master Assignment)</relationshipLabel>
        <relationshipName>Jobs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suburb__c</fullName>
        <label>Suburb</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Job</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Priyank__Location__Latitude__s</columns>
        <columns>Priyank__Location__Longitude__s</columns>
        <columns>Assignment_Area__c</columns>
        <columns>Country__c</columns>
        <columns>Postcode__c</columns>
        <columns>State__c</columns>
        <columns>Street__c</columns>
        <columns>Suburb__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Job-{000000}</displayFormat>
        <label>Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>